# backend

./: .dockerignore  .gitignore  .uvignore  Dockerfile  Makefile  README.md  SEEDING_GUIDE.md  USER_MANAGEMENT_GUIDE.md  deploy.sh  dev-requirements.txt  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  seed_admin.py  test-summary.md  test_api_endpoints.sh  test_check.py  test_runner.py
.github/workflows/: deploy.yml  docker-publish.yml  lint.yml  pr-checks.yml  release.yml  test.yml  trivy.yml
app/: .env.example  main.py
app/api/: application.py  exposedsecret.py  health.py  namespace.py  pod.py  sbom.py  sentry.py  user.py  vulnerability.py  vulnerability_old.py
app/core/: databaseClient.py  exposedsecretClient.py  mongo_client.py  namespaceClient.py  old_vulnerabilityClient.py  podClient.py  sbomClient.py  userClient.py  vulnerability.json  vulnerabilityClient.py
app/models/: exposedsecret.py  namespace.py  old_vulnerability.py  pod.py  sbom.py  user.py  vulnerability.py
k8s/: README.md  configmap.yaml  deployment-with-secrets.yaml  deployment.yaml  deployment.yaml.bak  ingress.yaml  namespace.yaml  rbac.yaml  secret.yaml
tests/: README.md  __init__.py  conftest.py  pytest_plugins.py
tests/integration/: test_api_integration.py  test_database_integration.py  test_user_integration.py
tests/unit/api/: test_application.py  test_exposedsecret_api.py  test_health.py  test_namespace_api.py  test_pod_api.py  test_sbom_api.py  test_sentry.py  test_user.py  test_user_fixed.py  test_user_old.py.disabled  test_vulnerability.py  test_vulnerability_api.py  test_vulnerability_flatten.py
tests/unit/core/: test_databaseClient.py  test_exposedsecretClient.py  test_namespaceClient.py  test_podClient.py  test_sbomClient.py  test_userClient.py  test_vulnerabilityClient.py
tests/unit/models/: test_exposedsecret_model.py  test_namespace_model.py  test_pod_model.py  test_sbom_model.py  test_vulnerability_model.py
