[project]
requires-python = ">=3.12"
name = "shield-backend"
version = "0.1"
description = "Shield Backend"
dependencies = [
  "fastapi",
  "kopf",
  "uvicorn",
  "pydantic",
  "pymongo",
  "python-dotenv",
  "sentry-sdk[fastapi]"
]

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "validate-pyproject",
  "pytest>=7.0.0",
  "pytest-asyncio>=0.20.0",
  "httpx>=0.24.0",
  "pytest-mock>=3.10.0",
  "mongomock>=4.1.0",
  "pytest-cov>=4.0.0"
]

dev-dependencies = [
  "black",
  "ruff", 
  "validate-pyproject",
  "pytest",
  "pytest-asyncio",
  "httpx",
  "pytest-mock",
  "mongomock",
  "pytest-cov"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Enable:
# - Pycodestyle ("E")
# - Pyflakes ("F")
# - Pydocstyle ("D)
# - flake8-bugbear ("B")
# - Isort ("I")
select = ["E", "F", "D", "B", "I"]
ignore = ["D100","D101","D102","D103","D104","D107","D211", "D213", "D400", "D415", "B008"]
